Bring back e-mail confirmation features
