# src/auth-server/openapi.yml
@@ -143,6 +143,41 @@ paths:
           $ref: '#/components/responses/GenericTooManyRequestsResponse'
         default:
           $ref: '#/components/responses/GenericInternalServerErrorResponse'
+  /confirm-email:
+    post:
+      operationId: confirmEmail
+      x-eov-operation-handler: confirmEmail
+      description: Confirm account's e-mail address provided during registration.
+      requestBody:
+        $ref: '#/components/requestBodies/ConfirmEmailRequestBody'
+      responses:
+        '200':
+          $ref: '#/components/responses/GenericOkResponse'
+        '400':
+          $ref: '#/components/responses/ConfirmEmailBadRequestResponse'
+        '429':
+          $ref: '#/components/responses/GenericTooManyRequestsResponse'
+        default:
+          $ref: '#/components/responses/GenericInternalServerErrorResponse'
+  /request-email-confirmation-token:
+    post:
+      operationId: requestEmailConfirmationToken
+      x-eov-operation-handler: requestEmailConfirmationToken
+      description: Request a token to be sent to account's e-mail address,
+        which will allow confirming the ownership of the e-mail by the user.
+      requestBody:
+        $ref: '#/components/requestBodies/RequestTokenRequestBody'
+      responses:
+        '200':
+          $ref: '#/components/responses/GenericOkResponse'
+        '400':
+          $ref: '#/components/responses/RequestTokenBadRequestResponse'
+        '404':
+          $ref: '#/components/responses/RequestEmailConfirmationAccountNotFoundResponse'
+        '429':
+          $ref: '#/components/responses/RequestTokenTooManyRequestsResponse'
+        default:
+          $ref: '#/components/responses/GenericInternalServerErrorResponse'
   /connect-account:
     post:
       operationId: connectAccount
@@ -227,6 +262,11 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/CreateAccountRequestData'
+    ConfirmEmailRequestBody:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ConfirmEmailRequestData'
     ConnectAccountRequestBody:
       content:
         application/json:
@@ -237,6 +277,11 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/DisconnectAccountRequestData'
+    RequestTokenRequestBody:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/RequestTokenRequestData'
     PostArtifactsRequestBody:
       content:
         application/json:
@@ -296,8 +341,26 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/GenericOkResponseData'
+    ConfirmEmailBadRequestResponse:
+      description: Missing token or provided token is invalid / already used.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/GenericErrorResponseData'
     GenericUnauthorizedResponse:
       description: Access token (session id) is missing or invalid.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/GenericErrorResponseData'
+    RequestTokenBadRequestResponse:
+      description: Request is malformatted or provided e-mail address is not valid.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/GenericErrorResponseData'
+    RequestTokenTooManyRequestsResponse:
+      description: Too many requests for a new token sent within a given timeframe.
       content:
         application/json:
           schema:
@@ -310,6 +373,12 @@ components:
             $ref: '#/components/schemas/GenericErrorResponseData'
     DisconnectAccountNotFoundResponse:
       description: Provided key is not connected to the account.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/GenericErrorResponseData'
+    RequestEmailConfirmationAccountNotFoundResponse:
+      description: Provided e-mail address is not associated with any account.
       content:
         application/json:
           schema:
@@ -447,6 +516,22 @@ components:
                         - disconnect
                     gatewayAccountId:
                       type: string
+    ConfirmEmailRequestData:
+      type: object
+      required:
+        - token
+      properties:
+        token:
+          type: string
+          description: Confirmation token recieved by the user via an e-mail.
+    RequestTokenRequestData:
+      type: object
+      required:
+        - email
+      properties:
+        email:
+          type: string
+          description: User's e-mail address.
     GenericErrorResponseData:
       type: object
       properties:
